namespace logger.LogStrategies
{
    public interface ILogStrategy
    {

        void WriteMessage(string message);

    }
}
